--- a/brooklyn-server/karaf/apache-brooklyn/src/main/filtered-resources/etc/branding.properties
+++ b/brooklyn-server/karaf/apache-brooklyn/src/main/filtered-resources/etc/branding.properties
@@ -28,6 +28,7 @@ welcome = \
 \u001B[33m                                             \u001B[0m\n\
 \u001B[33m http://brooklyn.incubator.apache.org \u001B[0m\n\
 \u001B[33m (version ${project.version})\u001B[0m\n\
+\u001B[33m (karf version ${karaf.version})\u001B[0m\n\
 \u001B[33m\u001B[0m\n\
 \u001B[33mHit '\u001B[1m<tab>\u001B[0m' for a list of available commands\u001B[0m\n\
 \u001B[33mand '\u001B[1m[cmd] --help\u001B[0m' for help on a specific command.\u001B[0m\n\
