--- a/brooklyn-server/core/pom.xml
+++ b/brooklyn-server/core/pom.xml
@@ -37,6 +37,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.brooklyn</groupId>
             <artifactId>brooklyn-test-support</artifactId>
             <version>${project.version}</version>
@@ -270,20 +281,51 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.felix</groupId>-->
+                <!--<artifactId>maven-bundle-plugin</artifactId>-->
+
+                <!--<configuration>-->
+                    <!--<supportedProjectTypes>-->
+                        <!--<supportedProjectType>jar</supportedProjectType>-->
+                    <!--</supportedProjectTypes>-->
+                    <!--<instructions>-->
+                        <!--<Export-Package>-->
+                            <!--brooklyn.*,-->
+                            <!--org.apache.brooklyn.*-->
+                        <!--</Export-Package>-->
+                        <!--<Import-Package>-->
+                            <!--!org.apache.brooklyn.rt.felix,-->
+                            <!--!org.apache.felix.framework,-->
+                            <!--*-->
+                        <!--</Import-Package>-->
+                        <!--<Service-Component>*</Service-Component>-->
+                        <!--<_dsannotations>*</_dsannotations>-->
+                    <!--</instructions>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <version>3.0.1</version>
+                <extensions>true</extensions>
+                <inherited>true</inherited>
                 <configuration>
-                    <supportedProjectTypes>
-                        <supportedProjectType>jar</supportedProjectType>
-                    </supportedProjectTypes>
                     <instructions>
-                        <Export-Package>brooklyn.*,org.apache.brooklyn.*</Export-Package>
+                        <Export-Package>
+                            brooklyn.*,
+                            org.apache.brooklyn.*
+                        </Export-Package>
                         <Import-Package>
                             !org.apache.brooklyn.rt.felix,
                             !org.apache.felix.framework,
                             *
                         </Import-Package>
+                        <!--<Private-Package>-->
+                            <!--org.apache.brooklyn.component,-->
+                            <!--org.apache.brooklyn.impl-->
+                        <!--</Private-Package>-->
+                        <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>
